theLanguageEmporium/force-app/main/default/objects/Tutor_Application__c/Tutor_Application__c.object-meta.xml
<CustomObject>
    <label>Tutor Application</label>
    <nameField>
        <displayFormat>TutAppID-{0000}</displayFormat>
        <label>Tutor Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tutor Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>