theLanguageEmporium/force-app/main/default/objects/Tutor_Application__c/fields/Language_s__c.field-meta.xml
<CustomField>
    <fullName>Language_s__c</fullName>
    <label>Language(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dev_Team</valueSetName>
    </valueSet>
</CustomField>