theLanguageEmporium/force-app/main/default/objects/Tutor_Application__c/fields/Learner_Account__c.field-meta.xml
<CustomField>
    <fullName>Learner_Account__c</fullName>
    <label>Learner Account</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tutor Applications</relationshipLabel>
    <relationshipName>Tutor_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>