theLanguageEmporium/force-app/main/default/objects/Tutor_Application__c/fields/Learner_Since__c.field-meta.xml
<CustomField>
    <fullName>Learner_Since__c</fullName>
    <label>Learner Since</label>
    <required>true</required>
    <type>Date</type>
</CustomField>